--- a/homepage.css
+++ b/homepage.css
@@ -1,93 +1,133 @@
 body {
-    background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1));
-}
-
-.header {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: solid;
-    color:slateblue;
-    text-align: center;
-    font-size: 30px
-
-}
-.navbar {
-    position:-webkit-sticky;
-    position:sticky;
-    top:0;
-}
-.navbar ul {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .topnav {
     overflow: hidden;
-    background-color: #333;
-    
-
-}
-.navbar li {
-    float:left;
+    background-color: darkgreen;
+  }
+  
+  .topnav a {
+    float: left;
     display: block;
-    color: white;
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
-.navbar li:hover:not(.active) {
-    background-color: dimgrey;
-}
-.active {
-    background-color: green;
-}
-
-.image img {
-    
-  
-    display:block;
-    margin: 25px auto;
-    
-    width:50%;
-    height:50%;
-    cursor: pointer;
-    border:5px solid #333;
-}
-.notification {
-    float:left;
-    
-    margin:50px 200px;
-    
-}
-
-.column {
-    display: inline-block;
-    background-color: burlywood;
-    padding:25px;
-    margin-right:15px;
-    border-radius: 10px;
-    
-    width:400px;
-    height:600px;
-    overflow: scroll;
-}
-
-.column h2 {
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
-    font-size: 30px;
-}
-.column ul {
-    list-style-type: none;
-    
-}
-.column li {
-    
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 300;
     font-size: 20px;
-    margin:5px;
-    color: darkmagenta;
-    background-color: lightslategray;
-    border-radius: 5px;
-    padding:15px;
-    
-}
+
+
+  }
+  
+  .topnav a:hover {
+    background-color: chocolate;
+    color: black;
+  }
+  
+ 
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+  
+   h1 {
+      /* z-index: -1; */
+      width: 100%;
+      /* height: 71px; */
+      /* position: absolute; */
+      text-align: center;
+      font-family: 'Times New Roman', Times, serif;
+      font-weight: bold;
+      color: rgb(34, 4, 63);
+      background-color: rgb(224, 211, 26);
+      padding: 15px;
+      font-size: 70px;
+      margin:0; 
+      
+  }
+
+
+  html {
+    box-sizing: border-box;
+  }
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  .row {
+      margin:0 250px;
+  }
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+  
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+  
+  .card {
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+
+  }
+  
+  .container {
+    padding: 0 16px;
+  }
+  
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .title {
+    color: grey;
+  }
+  .card img {
+      height:300px;
+  }
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 10px;
+  }
+  
+  .button:hover {
+    box-shadow:5px rgba(240, 7, 7, 0.2);
+  }
