--- a/homepage.css
+++ b/homepage.css
@@ -6,6 +6,8 @@ body {
   .topnav {
     overflow: hidden;
     background-color: darkgreen;
+    position: sticky;
+    top: 0;
   }
   
   .topnav a {
@@ -54,7 +56,7 @@ body {
   
    h1 {
       /* z-index: -1; */
-      width: 100%;
+      max-width: 100%;
       /* height: 71px; */
       /* position: absolute; */
       text-align: center;
@@ -81,14 +83,17 @@ body {
   }
   .column {
     float: left;
-    width: 33.3%;
+    max-width: 33.3%;
     margin-bottom: 16px;
     padding: 0 8px;
   }
   
   @media screen and (max-width: 650px) {
+    .row {
+      margin: auto;
+    }
     .column {
-      width: 100%;
+      max-width: 100%;
       display: block;
     }
   }
@@ -131,3 +136,138 @@ body {
   .button:hover {
     box-shadow:5px rgba(240, 7, 7, 0.2);
   }
+/*Slide Show*/
+
+.mySlides:not(:first-child) {display: none}
+img {vertical-align: middle;
+     height: 800px;
+     width: 1000px;
+    }
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  box-sizing: border-box;
+  box-shadow:10px rgb(99, 4, 224);
+  z-index: -1;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+
+.footer {
+  margin:0;
+  border-top:5px solid #333;
+  position: relative;
+}
+
+.foot1 {
+  position: absolute;
+  width:60%;
+  background-color: cornflowerblue;
+  max-height: 400px;
+  border-right: 5px solid #333;
+}
+.foot2 {
+  position: absolute;
+  width:40%;
+  right: 10px;
+  background-color: cornflowerblue;
+  max-height: 400px;
+  border-left: 5px solid #333;
+}
+
+.footer h3 {
+  color: brown;
+  font-size: 30px;
+  margin-left: 120px;
+  }
+.footer address {
+  color: darkgreen;
+  font-size: 25px;
+}
