--- a/homepage.css
+++ b/homepage.css
@@ -1,273 +1,105 @@
-body {
+html,body {
+    height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
   }
   
-  .topnav {
-    overflow: hidden;
-    background-color: darkgreen;
-    position: sticky;
-    top: 0;
-  }
-  
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px;
+  .start1 {
+    background-image: url("images/b1.jpeg");
+    background-color: #cccccc;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
 
-
-  }
-  
-  .topnav a:hover {
-    background-color: chocolate;
-    color: black;
-  }
-  
- 
-  .topnav .icon {
-    display: none;
-  }
-  
-  @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
-  
-   h1 {
-      /* z-index: -1; */
-      max-width: 100%;
-      /* height: 71px; */
-      /* position: absolute; */
-      text-align: center;
-      font-family: 'Times New Roman', Times, serif;
-      font-weight: bold;
-      color: rgb(34, 4, 63);
-      background-color: rgb(224, 211, 26);
-      padding: 15px;
-      font-size: 70px;
-      margin:0; 
-      
-  }
-
-
-  html {
-    box-sizing: border-box;
-  }
-  
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  .row {
-      margin:0 250px;
-  }
-  .column {
-    float: left;
-    max-width: 33.3%;
-    margin-bottom: 16px;
-    padding: 0 8px;
-  }
-  
-  @media screen and (max-width: 650px) {
-    .row {
-      margin: auto;
-    }
-    .column {
-      max-width: 100%;
-      display: block;
-    }
-  }
-  
-  .card {
-    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-
-  }
-  
-  .container {
-    padding: 0 16px;
-  }
-  
-  .container::after, .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+}
   
   .title {
-    color: grey;
-  }
-  .card img {
-      height:300px;
-  }
-  .button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
     text-align: center;
-    cursor: pointer;
-    width: 100%;
-    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    margin: 0;
+    line-height: 20px;
+  }
+  .start1 a {
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    font-size: 70px;
+    color: rgb(226, 212, 212);
+    text-decoration: none;
   }
   
-  .button:hover {
-    box-shadow:5px rgba(240, 7, 7, 0.2);
+  .start1 a:hover {
+    font-size: 100px;
+    transition-duration: 1s;
   }
-/*Slide Show*/
-
-.mySlides:not(:first-child) {display: none}
-img {vertical-align: middle;
-     height: 800px;
-     width: 1000px;
-    }
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-  box-sizing: border-box;
-  box-shadow:10px rgb(99, 4, 224);
-  z-index: -1;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
-
-.footer {
-  margin:0;
-  border-top:5px solid #333;
-  position: relative;
-}
-
-.foot1 {
-  position: absolute;
-  width:60%;
-  background-color: cornflowerblue;
-  max-height: 400px;
-  border-right: 5px solid #333;
-}
-.foot2 {
-  position: absolute;
-  width:40%;
-  right: 10px;
-  background-color: cornflowerblue;
-  max-height: 400px;
-  border-left: 5px solid #333;
-}
-
-.footer h3 {
-  color: brown;
-  font-size: 30px;
-  margin-left: 120px;
+  .start2 {
+    padding-left:200px;
+    height: 90%;
+    position: relative;
+    display: flex;
+    
   }
-.footer address {
-  color: darkgreen;
-  font-size: 25px;
-}
+  .column1 {
+      width: 30%;
+      padding:50px;
+  }
+  .column1 img {
+    width:100%;
+    height: 100%
+  }
+  .column2 {
+    width: 70%;
+    padding: 50px;
+    padding-right:100px;
+  }
+  .start2 a {
+    position: absolute;
+    text-decoration: none;
+    bottom: 0%;
+    left:50%;
+    font-size: 40px;
+    color:black;
+    border: 1px solid black;
+    height: 30px;
+  
+  }
+
+  .start3 {
+    height: 50%;
+    padding-left: 200px;
+    display: flex;
+    position: relative;
+  }
+  .column3 {
+    width: 40%;
+    padding-top:50px;
+  }
+  .column4 {
+    width: 60%;
+    padding-top: 70px;
+    padding-right: 150px;
+    position: relative;
+  }
+
+  .start4 {
+    display: flex;
+  }
+
+  .footer {
+    display: flex;
+    padding-left: 200px;
+    position: relative;
+    background-color: black;
+    height:30%;
+    margin:0;
+    padding: 0;
+    color:white;
+  }
+  
