--- a/homepage.css
+++ b/homepage.css
@@ -2,9 +2,65 @@ html,body {
     height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    scroll-behavior: smooth;
+    overflow-x: hidden;
   }
-  
+  .nav {
+    background-color: black;
+    color: white;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width:70%;
+    margin: 0;
+    padding: 0;
+    z-index: 11;
+    height: 50px;
+    padding: 20px;
+    font-size:15px;
+}
+.nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-top:15px;
+}
+.nav ul li {
+    background-color: black;
+    width: 120px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    float: left;
+    position: relative;
+    cursor: pointer;
+}
+.nav ul li a {
+    text-decoration: none;
+    color: white;
+    display: block;
+}
+.nav ul ul {
+    position:absolute;
+    display: none;
+    margin: 0;
+    margin-left:15px;
+}
+.nav ul ul li {
+    width: 200px;
+    height: 25px;
+    text-align: left;
+    line-height: 25px;
+    padding:20px;
+}
+.nav ul li:hover > ul {
+    display: block;
+}
+.nav ul ul ul {
+   margin-left: 200px;
+   bottom:0;
+}
+
+
   .start1 {
     background-image: url("images/b1.jpeg");
     background-color: #cccccc;
